[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/backgroundwater.png" type="Texture" id=1]
[ext_resource path="res://assets/backgroundsand.png" type="Texture" id=2]
[ext_resource path="res://UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://fishscenes/Roger.tscn" type="PackedScene" id=4]
[ext_resource path="res://fishscenes/Jazz.tscn" type="PackedScene" id=5]
[ext_resource path="res://fishscenes/Oddie.tscn" type="PackedScene" id=6]
[ext_resource path="res://fishscenes/Helena.tscn" type="PackedScene" id=7]
[ext_resource path="res://fishscenes/Robert.tscn" type="PackedScene" id=8]
[ext_resource path="res://fishscenes/Jeremy.tscn" type="PackedScene" id=9]
[ext_resource path="res://fishscenes/Georgie.tscn" type="PackedScene" id=10]
[ext_resource path="res://fishscenes/Ron.tscn" type="PackedScene" id=11]
[ext_resource path="res://AquariumTextureRect.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 360 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 650, 10 )

[node name="Node2D" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -631, -288 )
mouse_filter = 2
texture = ExtResource( 1 )
stretch_mode = 2
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sand" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -720.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSort" type="YSort" parent="."]

[node name="Ron" parent="YSort" instance=ExtResource( 11 )]
position = Vector2( 449, 379 )
collision_layer = 2

[node name="Jazz" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 373, 155 )
collision_layer = 2

[node name="Oddie" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 771, 576 )
collision_layer = 2

[node name="Roger" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 1078, 131 )
collision_layer = 2

[node name="Helena" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 195, 494 )
collision_layer = 2

[node name="Jeremy" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 1028, 484 )
collision_layer = 2

[node name="Robert" parent="YSort" instance=ExtResource( 8 )]
position = Vector2( 144, 233 )
collision_layer = 2

[node name="Georgie" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( 612, 114 )
collision_layer = 2

[node name="LeftBorder" type="MarginContainer" parent="."]
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="LeftBorder"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBorder/StaticBody2D"]
position = Vector2( 0, 360 )
shape = SubResource( 1 )

[node name="RightBorder" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="RightBorder"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightBorder/StaticBody2D"]
position = Vector2( 0, 360 )
shape = SubResource( 1 )

[node name="TopBorder" type="MarginContainer" parent="."]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="TopBorder"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopBorder/StaticBody2D"]
position = Vector2( 640, 0 )
shape = SubResource( 2 )

[node name="BottomBorder" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="BottomBorder"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomBorder/StaticBody2D"]
position = Vector2( 640, 0 )
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource( 3 )]
margin_left = -640.0
margin_right = 640.0
mouse_filter = 2

[connection signal="gui_input" from="." to="." method="_on_Node2D_gui_input"]
[connection signal="Bought_Hat" from="CanvasLayer/UI" to="." method="_on_UI_Bought_Hat"]
[connection signal="Bought_Item" from="CanvasLayer/UI" to="." method="_on_UI_Bought_Item"]
